*** When upgrading, don't forget to: "cd bin ; ./checksetup.pl" ***
*** Also, it is _highly_ advisable to backup your data before upgrading ***

Version 1.8.6

* Extra options are now available in the codestriker.conf file in
  regards to when emails are sent out.  It is now possible to control
  whether emails are sent to the topic author and/or the comment
  author when new comments are created.  Also, there is an option
  which determines if all reviewers are notified if the topic's state
  is changed.  This is all controlled by the $email_send_options
  configuration item.  From Jason Remillard.

* Added RSS support, so that the topic list screen now has an
  equivalent RSS view.  From Jason Remillard.

* Added a "add other reviewers" link next to the Cc: field in the "add
  comment" screen.  This allows the comment author to easily Cc all
  the other reviewers of the topic, for important comments that needs
  to be sent to all reviewers.

* When creating new topics linked to Bugzilla, also include the topic
  description field in the Bugzilla comment.

Version 1.8.5

* Complete support for VSS repositories.  Topics linked to a VSS
  repository can now be created by either specifying labels with the
  VSS directory of interest for code already committed in the
  repository, or pre-commit reviews can be done by generating diff
  text with the ssdiff.pl script in the Codestriker bin directory.

* Modified log_accum.pl so that deleted files are also included in the
  topic.

* On the topic list screen, there is a new button "Obsolete Topics",
  which allows you to create a new topic which superseeds the selected
  topics.  The obsoleted topics will be changed to state "Obsoleted"
  and will become read-only.  Note the @topic_states configuration
  variable in codestriker.conf needs to be modified to include the new
  'Obsoleted' state to enable this.  The view topic screens have been
  modified to include links if the topic being viewed has been