@@ -104,8 +104,8 @@ with
 
 <TABLE CELLPADDING="1" CELLSPACING="3" BORDER="0" WIDTH="100%">
 
-[% last_fileline = -1 %]
-[% last_filenumber = -1 %]
+[% last_fileline = -999 %]
+[% last_filenumber = -999 %]
 [% FOREACH comment = comments %]
 [% FLUSH IF loop.count() % 10 == 1 %]
 
@@ -115,8 +115,10 @@ with
         [%# Display the comment thread information #%]
 	<TD>
 	    [% IF comment.filename != '' %]
-	       <A HREF="[% comment.view_file %]">[% comment.filename %]:[% comment.fileline %]</A>
+	       <A HREF="[% comment.view_file %]">[% comment.filename %][% IF comment.fileline != -1 %]:[% comment.fileline %][% END %]</A>
 	       [% IF allow_repositories != 0 %] | <A HREF="[% comment.view_parallel %]">Parallel</A> [% END %]
+	    [% ELSIF comment.fileline == -1 && comment.filenumber == -1 %]
+	       Topic-level
 	    [% ELSE %]
 	       Line: [% comment.line %]
 	    [% END %]
